--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -8,9 +8,9 @@ body{
   box-shadow: 1px 2px 2px #9e9e9e;
 }
 .search-item{
-    width: 300px;
+    width: 35%;
     height: 26px;
-    margin: 6px 50px 0px 15%;
+    margin: 6px 50px 0px;
     float: right;
     padding: 7px 15px;
     border-radius: 5px;
@@ -101,10 +101,148 @@ li a:hover {
 .btn-login:hover{
   background: #00696d;
 }
-.active {
-    color: blue;
-    background-color: red !important;
+.mobile{
+  opacity: 0;
+  -webkit-transition: all .4s ease;
+  -moz-transition: all .4s ease;
+  -o-transition: all .4s ease;
+  -ms-transition: all .4s ease;
+  transition: all .4s ease;
+  margin-top: 40px;
+  position: absolute;
+  height: 100vh;
+  background: #2b2b2b;
+  z-index: 9;
+  margin-top: -147px;
+  padding: 25px;
+  margin-left: -400px;
 }
-[class*="active"] {
-    border: 3px solid #000;
+[class*="active"] .mobile{
+  opacity: 9.9;
+  margin-left: 0;
+  -webkit-transition: all .4s ease;
+  -moz-transition: all .4s ease;
+  -o-transition: all .4s ease;
+  -ms-transition: all .4s ease;
+  transition: all .4s ease;
+}
+.btn-mobile{
+    padding: 5px 23px 15px;
+    background: #a46214;
+    color: #fff;
+    font-size: 1.4em;
+    border-radius: 7px;
+    height: 24px;
+    margin-top: 5px;
+    margin-bottom: 6px;
+    display: none;
+}
+@media only screen and (max-width:1144px) {
+    .search-item{
+   width: 33%;
+    
+  }
+}
+@media only screen and (max-width:1112px) {
+     .search-item{
+    
+    width: 31%;
+  }
+}
+@media only screen and (max-width:1185px) {
+     .search-item{
+    width: 35%;
+    
+  }
+}
+@media only screen and (max-width:1170px) {
+     .search-item{
+    width: 34%;
+    
+  }
+}
+@media only screen and (max-width:1142px) {
+     .search-item{
+    width: 29%;
+    
+  }
+}
+@media only screen and (max-width:1136px) {
+  .search-item{
+    width: 55%;
+    
+  }
+  .btn-mobile{
+    display: block;
+  }
+  .btn-login{
+    display: none;
+  }
+  .list ul{
+    display: none
+  }
+}
+@media only screen and (max-width:999px) {
+  .search-item{
+    width: 52%;
+    
+  }
+  
+}
+@media only screen and (max-width:912px) {
+  .search-item{
+    width: 47%;
+    
+  }
+  
+}
+
+@media only screen and (max-width:880px) {
+  .search-item{
+    width: 44%;
+    
+  }
+  
+}
+@media only screen and (max-width:810px) {
+  .search-item{
+    width: 41%;
+    
+  }
+  
+}
+@media only screen and (max-width:700px) {
+  .search-item{
+    width: 30%;
+    
+  }
+  
+}
+@media only screen and (max-width:658px) {
+ 
+  .search-item{
+    width: 35%;
+    height: 26px;
+    margin: 6px 50px 0px -25px;
+  
+}
+  
+}
+@media only screen and (max-width:658px) {
+ 
+  .search-item{
+    width: 30%;
+   
+  
+}
+  
+}
+@media only screen and (max-width:494px) {
+ 
+  .search-item{
+    width: 28%;
+   
+  
+}
+  
 }
