--- a/src/styles/List.css
+++ b/src/styles/List.css
@@ -69,6 +69,14 @@
     color: #676767;
     font-weight: 200;
 }
+
+@media only screen and (max-width:1142px) {
+   .card {
+  
+    width: 17%;
+  
+  }
+}
 @media (max-width: 920px) {
   .card {
   
