--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -8,19 +8,19 @@ body{
   box-shadow: 1px 2px 2px #9e9e9e;
 }
 .search-item{
-    width: 35%;
-    height: 26px;
-    margin: 6px 50px 0px;
-    float: right;
-    padding: 7px 15px;
-    border-radius: 5px;
-    border: 0;
+  width: 100%;
+  height: 26px;
+  margin: 6px 0px 0px;
+  float: right;
+  padding: 7px 18px 7px 50px;
+  border-radius: 5px;
+  border: 0;
 }
 .search-icon{
-    position: inherit;
-    margin: 15px 35px 0px -82px;
-        color: #a46214;
-    font-weight: 600;
+  position: absolute;
+  margin: 16px 0 0px -50px;
+  color: #a46214;
+  font-weight: 600;
 }
 .App {
   text-align: center;
@@ -61,44 +61,61 @@ body{
   display: flex;
   flex-wrap: wrap;
 }
+div.columns{
+  flex: 1;
+  padding: 1px;
+  margin: 0px 5px;
+  
+}
+ div.columns:nth-of-type(2){
+    flex: 2;
+}
+div.columns:nth-of-type(3){
+    flex: 2.5;
+}
+div.columns:nth-of-type(4){
+    flex: 1;
+    text-align: right;
+}
 .logo{
-    height: 35px;
-    margin: 8px 50px 8px 50px;
+  height: 35px;
+  margin: 8px 50px 8px 0px;
 }
 ul.desktop-menu {
-    list-style-type: none;
-    margin: 0;
-    padding: 0;
-    overflow: hidden;
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+  overflow: hidden;
 }
 
 ul.desktop-menu li {
-    float: left;
+  float: left;
 }
 
 ul.desktop-menu li a {
-    display: block;
-    color: white;
-    text-align: center;
-    padding: 17px 30px;
-    text-decoration: none;
+  display: block;
+  color: white;
+  text-align: center;
+  padding: 17px 30px;
+  text-decoration: none;
 }
 
 ul.desktop-menu li a:hover {
-    background-color: #f78f1a;
+  background-color: #f78f1a;
 }
 .btn-login{
-    color: #fff;
-    background-color: #008286;
-    border-color: transparent;
-    height: 30px;
-    padding: 10px 25px 3px;
-    border-radius: 7px;
-    font-weight: 600;
-    text-decoration: none;
-    cursor: pointer;
-    /* margin-top: 0px; */
-    margin-top: 5px;
+  color: #fff;
+  background-color: #008286;
+  border-color: transparent;
+  height: 30px;
+  padding: 10px 25px 3px;
+  border-radius: 7px;
+  font-weight: 600;
+  text-decoration: none;
+  cursor: pointer;
+  /* margin-top: 0px; */
+  margin-top: 5px;
+  text-align: center;
 }
 .btn-login:hover{
   background: #00696d;
@@ -130,176 +147,71 @@ ul.desktop-menu li a:hover {
   transition: all .4s ease;
 }
 .btn-mobile{
-    padding: 5px 23px 15px;
-    background: #a46214;
-    color: #fff;
-    font-size: 1.4em;
-    border-radius: 7px;
-    height: 24px;
-    margin-top: 5px;
-    margin-bottom: 6px;
-    display: none;
+  padding: 5px 23px 15px;
+  background: #a46214;
+  color: #fff;
+  font-size: 1.4em;
+  border-radius: 7px;
+  height: 24px;
+  margin-top: 5px;
+  margin-bottom: 6px;
+  display: none;
+  text-align: center;
+  cursor: pointer;
 }
 .mobile a{
   display: block;
-   
-    border-bottom: 1px solid;
-    padding: 16px 0px 14px 22px;
-    /* background: #ccc; */
-    width: 100%;
-    color: #fff;
-    text-decoration: none;
-    border-bottom: 1px solid #797979;
+  border-bottom: 1px solid;
+  padding: 16px 0px 14px 22px;
+  /* background: #ccc; */
+  width: 100%;
+  color: #fff;
+  text-decoration: none;
+  border-bottom: 1px solid #797979;
 }
 .mobile a:hover{
   background: #404040;
 }
 .mobile ul{
   list-style: none;
-    padding: 0;
-    margin: 0;
+  padding: 0;
+  margin: 0;
 }
-@media only screen and (max-width:1144px) {
-    .search-item{
-   width: 33%;
-    
-  }
-}
-@media only screen and (max-width:1112px) {
-     .search-item{
-    
-    width: 31%;
-  }
-}
-@media only screen and (max-width:1185px) {
-     .search-item{
-    width: 35%;
-    
-  }
-}
-@media only screen and (max-width:1170px) {
-     .search-item{
-    width: 34%;
-    
-  }
-}
-@media only screen and (max-width:1142px) {
-     .search-item{
-    width: 29%;
-    
-  }
-}
+
 @media only screen and (max-width:1136px) {
-  .search-item{
-    width: 55%;
-    
+   div.columns:nth-of-type(2), .search-icon, .btn-login, .list ul{
+    display: none;
   }
   .btn-mobile{
     display: block;
-  }
-  .btn-login{
-    display: none;
-  }
-  .list ul{
-    display: none
-  }
-}
-@media only screen and (max-width:999px) {
-  .search-item{
-    width: 52%;
-    
-  }
-  
-}
-@media only screen and (max-width:912px) {
-  .search-item{
-    width: 47%;
-    
-  }
-  
-}
-
-@media only screen and (max-width:880px) {
-  .search-item{
-    width: 44%;
-    
-  }
-  
-}
-@media only screen and (max-width:810px) {
-  .search-item{
-    width: 41%;
-    
-  }
-  
-}
-@media only screen and (max-width:700px) {
-  .search-item{
-    width: 30%;
-    
-  }
-  
-}
-@media only screen and (max-width:658px) {
- 
-  .search-item{
-    width: 35%;
-    height: 26px;
-    margin: 6px 50px 0px -25px;
-  
-}
-  
-}
-@media only screen and (max-width:658px) {
- 
-  .search-item{
-    width: 30%;
-   
-  
-}
-  
-}
-@media only screen and (max-width:555px) {
-  .search-icon{
-        margin: 15px 20px 0px -68px;
+    width: 123px;
   }
   .search-item{
-    width: 65%;
-    margin: 6px 35px 0px 26px;
-  
+    padding: 7px 18px 7px 17px;
   }
-  .logo-container{
-    width: 100%;
+  div.columns{
     text-align: center;
   }
-  
+ 
 }
 
-@media only screen and (max-width:555px) {
+@media only screen and (max-width:590px) {
   
-  .search-item{
-    width: 62%;
-   
-  
+   div.columns:nth-of-type(1){
+      flex: none;
+      width: 100%
   }
-  
-  
-}
-@media only screen and (max-width:412px) {
-  
-  .search-item{
-    width: 59%;
-   
-  
+  div.columns:nth-of-type(3){
+      flex: 4;
+      padding-left: 45px;
   }
-}
-@media only screen and (max-width:380px) {
-  
-  .search-item{
-    width: 56%;
-   
-  
+  div.columns:nth-of-type(4){
+      padding-right: 15px;
   }
-}
+  .btn-mobile{
+    width: 35px;
+  }
 
-  
+
+
+}
