--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -123,19 +123,20 @@ ul.desktop-menu li a:hover {
 .mobile{
   opacity: 0;
   -webkit-transition: all .4s ease;
-  -moz-transition: all .4s ease;
-  -o-transition: all .4s ease;
-  -ms-transition: all .4s ease;
   transition: all .4s ease;
   margin-top: 40px;
   position: absolute;
   height: 100vh;
   background: #2b2b2b;
   z-index: 9;
-  margin-top: -112px;
+  margin-top: -6px;
   padding: 25px;
   margin-left: -400px;
   width: 216px;
+  margin: -400px !important;
+}
+[class*="active"] .mobile ul{
+  display: block !important;
 }
 [class*="active"] .mobile{
   opacity: 9.9;
@@ -145,6 +146,7 @@ ul.desktop-menu li a:hover {
   -o-transition: all .4s ease;
   -ms-transition: all .4s ease;
   transition: all .4s ease;
+  margin: -15px !important;
 }
 .btn-mobile{
   padding: 5px 23px 15px;
@@ -153,7 +155,7 @@ ul.desktop-menu li a:hover {
   font-size: 1.4em;
   border-radius: 7px;
   height: 24px;
-  margin-top: 5px;
+  margin: 5px auto;
   margin-bottom: 6px;
   display: none;
   text-align: center;
@@ -176,6 +178,15 @@ ul.desktop-menu li a:hover {
   list-style: none;
   padding: 0;
   margin: 0;
+}
+
+[class*="menus"]{
+    /*border-bottom: 3px solid transparent;*/
+}
+
+[class*="active-menu"]{
+    /*border-bottom: 3px solid #d47001;
+    background: #dc9209;*/
 }
 
 @media only screen and (max-width:1136px) {
@@ -203,13 +214,16 @@ ul.desktop-menu li a:hover {
   }
   div.columns:nth-of-type(3){
       flex: 4;
-      padding-left: 45px;
+      padding-left: 35px;
   }
   div.columns:nth-of-type(4){
-      padding-right: 15px;
+     
   }
   .btn-mobile{
     width: 35px;
+  }
+  .list{
+    padding: 0px 12px;
   }
 
 
