--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -18,7 +18,7 @@ body{
 }
 .search-icon{
   position: absolute;
-  margin: 16px 0 0px -50px;
+  margin: 12px 0 0px -50px;
   color: #a46214;
   font-weight: 600;
 }
@@ -61,13 +61,14 @@ body{
   display: flex;
   flex-wrap: wrap;
 }
+
 div.columns{
   flex: 1;
   padding: 1px;
   margin: 0px 5px;
   
 }
- div.columns:nth-of-type(2){
+div.columns:nth-of-type(2){
     flex: 2;
 }
 div.columns:nth-of-type(3){
@@ -108,7 +109,7 @@ ul.desktop-menu li a:hover {
   background-color: #008286;
   border-color: transparent;
   height: 30px;
-  padding: 10px 25px 3px;
+  padding: 12px 20px 0px;
   border-radius: 7px;
   font-weight: 600;
   text-decoration: none;
@@ -148,6 +149,34 @@ ul.desktop-menu li a:hover {
   transition: all .4s ease;
   margin: -15px !important;
 }
+.mobile-x{
+  display: none;
+}
+.mobile-x ul{
+  margin: 0 auto;
+  display: flex;
+  flex-wrap: wrap;
+  padding: 0;
+}
+.mobile-x ul li{
+  flex: 1 1;
+  padding: 1px;
+  margin: 0px;
+  padding: 12px;
+  list-style: none;
+  text-align: center;
+  background: #9b642c;
+  color: #fff;
+}
+.mobile-x ul li:nth-of-type(1){
+    border-right: 1px solid #000;
+}
+.mobile-x a{
+  display: block;
+  text-decoration: none;
+  color: #fff;
+}
+
 .btn-mobile{
   padding: 5px 23px 15px;
   background: #a46214;
@@ -190,12 +219,15 @@ ul.desktop-menu li a:hover {
 }
 
 @media only screen and (max-width:1136px) {
-   div.columns:nth-of-type(2), .search-icon, .btn-login, .list ul{
+   div.columns:nth-of-type(2), .search-icon, .list ul{
     display: none;
   }
-  .btn-mobile{
+  /*.btn-mobile{
     display: block;
     width: 123px;
+  }*/
+  .mobile-x{
+    display: block;
   }
   .search-item{
     padding: 7px 18px 7px 17px;
@@ -204,6 +236,11 @@ ul.desktop-menu li a:hover {
     text-align: center;
   }
  
+}
+@media only screen and (max-width:740px) {
+  .only-desktop{
+    display: none;
+  }
 }
 
 @media only screen and (max-width:590px) {
@@ -224,8 +261,15 @@ ul.desktop-menu li a:hover {
   }
   .list{
     padding: 0px 12px;
+    margin-bottom: 15px;
   }
 
 
 
+}
+
+@media only screen and (max-width:480px) {
+  div.columns:nth-of-type(4){
+     display: none;
+  }
 }
