--- a/src/styles/List.css
+++ b/src/styles/List.css
@@ -25,6 +25,12 @@
   flex-wrap: wrap;
 }
 
+.cards-wrap h2{
+  padding: 15px;
+  color: #000;
+  font-weight: 100;
+}
+
 .card {
     background: #fff;
     border-radius: 2px;
