--- a/src/styles/List2.css
+++ b/src/styles/List2.css
@@ -25,6 +25,12 @@
   flex-wrap: wrap;
 }
 
+.cards-wrap h2{
+  padding: 15px;
+  color: #000;
+  font-weight: 100;
+}
+
 .card {
     background: #fff;
     border-radius: 2px;
@@ -69,6 +75,7 @@
     color: #676767;
     font-weight: 200;
 }
+
 
 @media only screen and (max-width:1142px) {
    .card {
