--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -5,6 +5,7 @@ body{
 
 .search-box{
   background: #f89b33;
+  background: #ff500a;
   box-shadow: 1px 2px 2px #9e9e9e;
 }
 .search-item{
@@ -15,11 +16,15 @@ body{
   padding: 7px 18px 7px 50px;
   border-radius: 5px;
   border: 0;
+  font-size: 1.1em;
+  font-weight: 100;
+  color: #30448f;
 }
 .search-icon{
   position: absolute;
-  margin: 12px 0 0px -50px;
-  color: #a46214;
+  margin: 13px 0 0 -52px;
+  /*color: #a46214;*/
+  color: #d85c45;
   font-weight: 600;
 }
 .App {
@@ -102,14 +107,16 @@ ul.desktop-menu li a {
 }
 
 ul.desktop-menu li a:hover {
-  background-color: #f78f1a;
+  /*background-color: #f78f1a;*/
+  background: #cd3c21;
 }
 .btn-login{
   color: #fff;
-  background-color: #008286;
+  /*background-color: #008286;*/
+  background: #363a91;
+  
   border-color: transparent;
-  height: 30px;
-  padding: 12px 20px 0px;
+  padding: 12px 0px 12px;
   border-radius: 7px;
   font-weight: 600;
   text-decoration: none;
@@ -119,7 +126,9 @@ ul.desktop-menu li a:hover {
   text-align: center;
 }
 .btn-login:hover{
-  background: #00696d;
+  /*background: #00696d;*/
+  background-color: #7882f0; 
+
 }
 .mobile{
   opacity: 0;
@@ -165,11 +174,15 @@ ul.desktop-menu li a:hover {
   padding: 12px;
   list-style: none;
   text-align: center;
-  background: #9b642c;
+  background: #353535;
+  color: #fff;
+}
+.mobile-x ul li:hover{
+  background: #000;
   color: #fff;
 }
 .mobile-x ul li:nth-of-type(1){
-    border-right: 1px solid #000;
+    border-right: 1px solid #ff500a;
 }
 .mobile-x a{
   display: block;
