--- a/src/styles/List2.css
+++ b/src/styles/List2.css
@@ -65,8 +65,9 @@
     margin-top: 12px;
     margin-bottom: 0;
     font-size: 1em;
-    color: #4e4e4e;
     font-weight: 400;
+    font-size: 1.1em;
+    color: #d85c45;
 }
 .card h6{
     margin: 0;
@@ -75,7 +76,16 @@
     color: #676767;
     font-weight: 200;
 }
-
+.btn-read{
+  background: #30448f;
+  color: #fff;
+  text-align: center;
+  padding: 10px;
+  border-radius: 5px;
+  margin-top: 12px;
+  width: 60%;
+  margin: 12px auto;
+}
 
 @media only screen and (max-width:1142px) {
    .card {
