--- a/src/styles/List3.css
+++ b/src/styles/List3.css
@@ -32,19 +32,19 @@
 }
 
 .card {
-  background: #fff;
-  border-radius: 2px;
-  display: inline-block;
-  height: auto;
-  margin: 15px;
-  position: relative;
-  padding: 2%;
-  width: 18%;
-  /* box-shadow: 0 -1px 3px rgba(0,0,0,0.1), 0 6px 6px rgba(0,0,0,0.13); */
-  box-shadow: 0 0px 3px rgba(0,0,0,0.1), 0 2px 8px rgba(0,0,0,0.1);
-  text-align: left;
-  cursor: pointer;
-  -webkit-transition: all .2s ease;
+    background: #fff;
+    border-radius: 2px;
+    display: inline-block;
+    height: auto;
+    margin: 15px;
+    position: relative;
+    padding: 2%;
+    width: 18%;
+    /* box-shadow: 0 -1px 3px rgba(0,0,0,0.1), 0 6px 6px rgba(0,0,0,0.13); */
+    box-shadow: 0 0px 3px rgba(0,0,0,0.1), 0 2px 8px rgba(0,0,0,0.1);
+    text-align: left;
+    cursor: pointer;
+    -webkit-transition: all .2s ease;
   -moz-transition: all .2s ease;
   -o-transition: all .2s ease;
   -ms-transition: all .2s ease;
@@ -65,7 +65,6 @@
     margin-top: 12px;
     margin-bottom: 0;
     font-size: 1em;
-    /*color: #4e4e4e;*/
     font-weight: 400;
     font-size: 1.1em;
     color: #d85c45;
@@ -87,6 +86,68 @@
   width: 60%;
   margin: 12px auto;
 }
+
+.flexcontainer{
+  max-width: 1200px;
+  margin: 0 auto;
+  display: flex;
+  flex-wrap: wrap;
+  padding: 0px 15px 0px 15px;
+}
+.flexcontainer img{
+  width: 150px;
+}
+div.columns{
+  margin: 0 auto;
+  display: flex;
+  flex-wrap: wrap;
+  padding: 10px;
+  margin: 5px;
+  flex: 1 0 45%;
+  background: #fff;
+  
+}
+div.columns div{
+  flex: 1;
+  padding: 10px;
+  margin: 5px;
+  
+}
+div.columns div:nth-of-type(1){
+  flex: 1;
+  padding: 10px;
+  margin: 5px;
+  
+  
+}
+div.columns div:nth-of-type(2){
+  flex: 4;
+  padding: 10px;
+  margin: 5px;
+
+  
+}
+.product-info-list h5{
+  font-size: 1.2em;
+  font-weight: 100;
+  color: #d85c45;
+  margin-bottom: 0;
+}
+.product-info-list h6{
+  font-size: 1em;
+  font-weight: 100;
+  color: #333;
+  margin-bottom: 0;
+  margin-top: 8px;
+}
+.desc{
+  margin: 0;
+  padding: 15px 0px !important;
+  color: #777575;
+  font-size: 1em;
+  font-weight: 100;
+}
+
 @media only screen and (max-width:1142px) {
    .card {
   
