--- a/src/styles/List.css
+++ b/src/styles/List.css
@@ -1,6 +1,6 @@
 /*2019*/
 .list{
-  max-width: 1200px;
+  max-width: 1380px;
   margin: 0 auto;
 }
 
@@ -29,6 +29,8 @@
   padding: 15px;
   color: #000;
   font-weight: 100;
+  padding-bottom: 0;
+  margin-bottom: 15px;
 }
 
 .card {
