--- a/src/styles/List2.css
+++ b/src/styles/List2.css
@@ -34,19 +34,19 @@
 }
 
 .card {
-    background: #fff;
-    border-radius: 2px;
-    display: inline-block;
-    height: auto;
-    margin: 15px;
-    position: relative;
-    padding: 2%;
-    width: 18%;
-    /* box-shadow: 0 -1px 3px rgba(0,0,0,0.1), 0 6px 6px rgba(0,0,0,0.13); */
-    box-shadow: 0 0px 3px rgba(0,0,0,0.1), 0 2px 8px rgba(0,0,0,0.1);
-    text-align: left;
-    cursor: pointer;
-    -webkit-transition: all .2s ease;
+  background: #fff;
+  border-radius: 2px;
+  display: inline-block;
+  height: auto;
+  margin: 15px;
+  position: relative;
+  padding: 2%;
+  width: 18%;
+  /* box-shadow: 0 -1px 3px rgba(0,0,0,0.1), 0 6px 6px rgba(0,0,0,0.13); */
+  box-shadow: 0 0px 3px rgba(0, 0, 0, 0.01), 0 2px 8px rgba(0, 0, 0, 0);
+  text-align: left;
+  cursor: pointer;
+  -webkit-transition: all .2s ease;
   -moz-transition: all .2s ease;
   -o-transition: all .2s ease;
   -ms-transition: all .2s ease;
