--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -266,8 +266,10 @@ footer p{
 }
 
 @media only screen and (max-width:590px) {
-  
-   div.columns:nth-of-type(1){
+  .logo{
+    margin: 8px 0px 8px 0px;
+  }
+  div.columns:nth-of-type(1){
       flex: none;
       width: 100%
   }
